# jrec

./: .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  hie.yaml  jrec.cabal  rec.cabal
.github/workflows/: ci.yaml
src/: JRec.hs  Rec.hs  Record.hs
src/JRec/: Field.hs  Generic.hs  Internal.hs  Super.hs  Tuple.hs
src/Rec/: Field.hs  Super.hs  Tuple.hs
src/Record/: Field.hs  Super.hs  Tuple.hs
test/: JRecShouldNotTypecheckSpec.hs  JRecSpec.hs  doctests.hs
