cabal-version:      >=1.10
name:               jrec
version:            0.1.0.0
synopsis:           anonymous records for busy people

-- description:
-- bug-reports:
license:            BSD3
license-file:       LICENSE
author:             Artyom Kazak
maintainer:         artyom.kazak@juspay.in

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  hs-source-dirs:     src
  exposed-modules:
    JRec
    JRec.Super
    JRec.Tuple

  default-extensions:
    BlockArguments
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns
    ConstraintKinds
    PackageImports

  build-depends:
      aeson
    , base          >=4.13 && <4.14
    , constraints
    , deepseq
    , generic-data
    , generic-lens
    , generic-optics
    , ghc-prim
    , optics-core
    , lens
    , mtl
    , text

  default-language:   Haskell2010

test-suite jrec-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs 
  build-depends:
    base,
    hspec,
    QuickCheck,
    lens,
    jrec
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns
    ConstraintKinds


