cabal-version:      2.4
name:               jrec
version:            0.1.0.0
synopsis:           anonymous records for busy people

-- description:
bug-reports:        https://github.com/juspay/jrec/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Artyom Kazak
maintainer:         artyom.kazak@juspay.in

-- copyright:
-- category:
build-type:         Custom
extra-source-files:
  CHANGELOG.md
  README.md

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest  >=1.0.8 && <1.1

flag with-aeson
  description: Enable Aeson instances
  -- don't let the solver fiddle with the flag
  manual: True
  -- with instances by default
  default: True

-- A common stanza to share with tests, so that ghcid (bin/test) will reload
-- instantly when the library sources change (without us having to restart it).
common library-common 
  default-language:   Haskell2010
  build-depends:
      aeson
    , base          >=4.13 && <4.15
    , constraints
    , deepseq
    , generic-data
    , generic-lens
    , generic-optics
    , ghc-prim
    , optics-core
    , lens
    , mtl
    , text

library
  import: library-common
  hs-source-dirs:     src
  exposed-modules:
    JRec
    JRec.Internal
  other-modules:
    JRec.Tuple
  if flag(with-aeson)
    cpp-options: -DWITH_AESON

test-suite jrec-test
  import: library-common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs 
  build-depends:
    jrec,
    base,
    hspec,
    QuickCheck,
    lens

test-suite doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  build-depends:
      base
    , base-compat
    , doctest
    , QuickCheck
    , jrec
    , template-haskell
  ghc-options:      -Wall -threaded
  hs-source-dirs:   test
  default-language: Haskell2010
