cabal-version:      2.4
name:               jrec
version:            0.1.0.0
synopsis:           anonymous records for busy people

-- description:
bug-reports:        https://github.com/juspay/jrec/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Artyom Kazak
maintainer:         artyom.kazak@juspay.in

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

flag with-aeson
  description: Enable Aeson instances
  -- don't let the solver fiddle with the flag
  manual: True
  -- with instances by default
  default: True

flag with-generics
  description: Enable GHC.Generics instances
  -- don't let the solver fiddle with the flag
  manual: True
  -- with instances by default
  default: True

-- A common stanza to share with tests, so that ghcid (bin/test) will reload
-- instantly when the library sources change (without us having to restart it).
common library-common 
  default-language:   Haskell2010
  build-depends:
      aeson
    , base          >=4.13 && <4.15
    , constraints
    , deepseq
    , generic-data
    , generic-lens
    , generic-optics
    , ghc-prim
    , optics-core
    , lens
    , mtl
    , text
  default-extensions:
    BlockArguments
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns
    ConstraintKinds
    PackageImports

library
  import: library-common
  hs-source-dirs:     src
  exposed-modules:
    JRec
    JRec.Internal
  other-modules:
    JRec.Tuple
    JRec.Field
  if flag(with-aeson)
    cpp-options: -DWITH_AESON
  if flag(with-generics)
    cpp-options: -DWITH_GENERICS

test-suite jrec-test
  import: library-common
  type: exitcode-stdio-1.0
  hs-source-dirs: test, src
  main-is: Spec.hs
  cpp-options: -DWITH_AESON -DWITH_GENERICS
  build-depends:
    base,
    hspec,
    QuickCheck,
    lens,
    should-not-typecheck
