cabal-version:      >=1.10
name:               rec
version:            0.1.0.0
synopsis:           anonymous records for busy people

-- description:
-- bug-reports:
license:            BSD3
license-file:       LICENSE
author:             Artyom Kazak
maintainer:         artyom.kazak@juspay.in

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

executable rec
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:    base ==4.13.*

  -- hs-source-dirs:
  default-language: Haskell2010
